<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ModuleActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="29dp"
        tools:layout_editor_absoluteY="112dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="16dp">

            <TextView
                android:id="@+id/tvModuleName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/module_name"
                android:textSize="24sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp"
                />

            <TextView
                android:id="@+id/tvDesctiption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/description" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp"
                />

            <TextView
                android:id="@+id/tvData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/data" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp"
                />

            <Button
                android:id="@+id/btMoreInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/find_out_more" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp"
                />

            <Button
                android:id="@+id/btAttemptQuiz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attempt_quiz" />


            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp"
                />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/did_you_read_it"
                android:textColor="#F44336" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp"
                />

            <EditText
                android:id="@+id/etAddNotes"
                android:layout_width="341dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/add_notes_here"
                android:inputType="textPersonName"
                android:autofillHints="" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp"
                />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btSeeMyNotes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="25dp"
                    android:layout_marginRight="25dp"
                    android:text="@string/see_my_notes"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btMakeNotes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginLeft="25dp"
                    android:text="@string/upload_notes"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>